feat : workflow, services and serialization